[gd_scene load_steps=32 format=3 uid="uid://b0dklw464yb2h"]

[ext_resource type="Script" uid="uid://n5n1guxmpsrw" path="res://Scripts/RoomEvents/treasure_chest_room.gd" id="1_8haid"]
[ext_resource type="Resource" uid="uid://dg2wcy0kx620y" path="res://Resources/Enemies/Goblin.tres" id="2_hxlt1"]
[ext_resource type="Texture2D" uid="uid://csprhhu3ka3ig" path="res://Assets/Art/Room_03_Background.png" id="3_mgjqs"]
[ext_resource type="FontFile" uid="uid://dqgfi4u7flyld" path="res://Assets/UI/Fonts/Button_Immortal.ttf" id="4_7b6al"]
[ext_resource type="Texture2D" uid="uid://chpq5ee7yt7u0" path="res://Assets/Art/Events/MerchantCorpse.png" id="5_ujq0u"]
[ext_resource type="PackedScene" uid="uid://c3h585v8mippc" path="res://Scenes/Elements/free_item_offering.tscn" id="6_rscnt"]
[ext_resource type="Texture2D" uid="uid://c6uhtg2telr2f" path="res://Assets/Art/Particles/circle_05.png" id="7_hxlt1"]
[ext_resource type="Texture2D" uid="uid://dxw4wnrx37lmp" path="res://Assets/Art/Particles/magic_05.png" id="7_obps0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q4k6o"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_02na4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f2fgj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ps6k6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ooyyh"]

[sub_resource type="Curve" id="Curve_mgjqs"]
_data = [Vector2(0, 0.480378), 0.0, 0.124358, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_7b6al"]
offsets = PackedFloat32Array(0, 0.680934, 1)
colors = PackedColorArray(1, 0, 0.116667, 1, 0.68, 0, 0.0793334, 1, 0.95, 0.00949999, 0.00949999, 0)

[sub_resource type="Curve" id="Curve_02na4"]
_limits = [0.5, 3.0, 0.0, 1.0]
_data = [Vector2(0, 0.5), 0.0, 0.0, 0, 0, Vector2(1, 1.42697), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_f2fgj"]
offsets = PackedFloat32Array(0, 0.729592, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0.520408, 1, 1, 1, 0)

[sub_resource type="Animation" id="Animation_ckt4l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../FreeItemOffering:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../FreeItemOffering:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../FreeItemOffering:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_f2fgj"]
resource_name = "closeBox"
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../FreeItemOffering:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.08, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1), Vector2(0.5, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../FreeItemOffering:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../FreeItemOffering:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_3q1ay"]
resource_name = "openBox"
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../FreeItemOffering:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.35, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(1.1, 1.1), Vector2(0.95, 0.95), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../FreeItemOffering:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../FreeItemOffering:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sixyl"]
_data = {
&"RESET": SubResource("Animation_ckt4l"),
&"closeBox": SubResource("Animation_f2fgj"),
&"openBox": SubResource("Animation_3q1ay")
}

[sub_resource type="Animation" id="Animation_ooyyh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("picTreasure:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("picTreasure:pivot_offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("picTreasure:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("picTreasure:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("picTreasure/Button:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("particleBlood:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_aix3x"]
resource_name = "jars_bounce"
length = 2.0
loop_mode = 1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("picTreasure:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.07, 0.15, 0.22, 0.29, 0.35, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0523599, -0.0349066, 0.0436332, -0.0349066, 0.0, -4.28008e-08]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("picTreasure:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.07, 0.15, 0.22, 0.29, 0.35, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1.051), Vector2(1.03, 0.97), Vector2(0.906, 1.03), Vector2(1.05, 1), Vector2(1, 1), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("picTreasure:pivot_offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(140, 240)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("picTreasure:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_q4k6o"]
resource_name = "jars_done"
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("picTreasure:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("picTreasure:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("particleBlood:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_ps6k6"]
resource_name = "show_jars"
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("picTreasure:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("picTreasure:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("picTreasure/Button:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("particleBlood:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3q1ay"]
_data = {
&"RESET": SubResource("Animation_ooyyh"),
&"jars_bounce": SubResource("Animation_aix3x"),
&"jars_done": SubResource("Animation_q4k6o"),
&"show_jars": SubResource("Animation_ps6k6")
}

[sub_resource type="Animation" id="Animation_rqccd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("lblOpen:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("lblOpen:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("lblOpen:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(569, 463)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("lblOpen:pivot_offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(182, 33)]
}

[sub_resource type="Animation" id="Animation_taixv"]
resource_name = "hide_text"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("lblOpen:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.5, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("lblOpen:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(569, 400), Vector2(569, 463)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("lblOpen:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_sixyl"]
resource_name = "show_text"
length = 0.3
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("lblOpen:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("lblOpen:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(569, 463), Vector2(569, 400)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("lblOpen:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"hover_text"
}]
}

[sub_resource type="Animation" id="Animation_0y74d"]
resource_name = "text_hover"
length = 2.0
loop_mode = 1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("lblOpen:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("lblOpen:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.9, 0.9), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_23tol"]
_data = {
&"RESET": SubResource("Animation_rqccd"),
&"hide_text": SubResource("Animation_taixv"),
&"show_text": SubResource("Animation_sixyl"),
&"text_hover": SubResource("Animation_0y74d")
}

[node name="TreasureChest_Room" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8haid")
event_description = "From beyond the door you can hear faint growls..."
enemy_resource = ExtResource("2_hxlt1")

[node name="picBack" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_mgjqs")
expand_mode = 1

[node name="lblOpen" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 569.0
offset_top = 400.0
offset_right = 933.0
offset_bottom = 467.0
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(182, 33)
theme_override_colors/font_color = Color(0.899266, 0.805079, 0.264486, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.458824)
theme_override_colors/font_outline_color = Color(0.50771, 0.241023, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("4_7b6al")
theme_override_font_sizes/font_size = 36
text = "Search the Corpse"
horizontal_alignment = 1
vertical_alignment = 1

[node name="picTreasure" type="TextureRect" parent="."]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 574.0
offset_top = 434.0
offset_right = 1098.84
offset_bottom = 744.0
scale = Vector2(0.65, 0.65)
texture = ExtResource("5_ujq0u")
expand_mode = 3

[node name="Button" type="Button" parent="picTreasure"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_q4k6o")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_02na4")
theme_override_styles/hover = SubResource("StyleBoxEmpty_f2fgj")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ps6k6")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ooyyh")
disabled = true

[node name="FreeItemOffering" parent="." instance=ExtResource("6_rscnt")]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
items_offered = 4
box_name = "He's dead..."
box_desc = "Whelp... no use letting it all go to waste."

[node name="particleBlood" type="CPUParticles2D" parent="."]
position = Vector2(762, 532)
emitting = false
amount = 10
texture = ExtResource("7_hxlt1")
lifetime = 0.75
speed_scale = 0.4
explosiveness = 0.6
randomness = 0.5
direction = Vector2(0, -1)
spread = 47.9
gravity = Vector2(0, 800)
initial_velocity_min = 150.0
initial_velocity_max = 300.0
linear_accel_min = 50.0
linear_accel_max = 100.0
scale_amount_min = 0.03
scale_amount_max = 0.05
scale_amount_curve = SubResource("Curve_mgjqs")
color = Color(0.505882, 0.188235, 0.188235, 1)
color_ramp = SubResource("Gradient_7b6al")

[node name="jar_particles" type="CPUParticles2D" parent="."]
visible = false
position = Vector2(704, 557)
emitting = false
amount = 7
texture = ExtResource("7_obps0")
speed_scale = 0.25
randomness = 0.3
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 100.0
initial_velocity_max = 300.0
angular_velocity_min = 30.0
angular_velocity_max = 200.0
scale_amount_min = 0.1
scale_amount_max = 0.2
scale_amount_curve = SubResource("Curve_02na4")
color = Color(0.88, 0.645333, 0, 1)
color_ramp = SubResource("Gradient_f2fgj")

[node name="animBox" type="AnimationPlayer" parent="."]
root_node = NodePath("../animJars")
libraries = {
&"": SubResource("AnimationLibrary_sixyl")
}

[node name="animJars" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_3q1ay")
}

[node name="animOpen" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_23tol")
}

[connection signal="mouse_entered" from="picTreasure/Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="picTreasure/Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="picTreasure/Button" to="." method="_on_button_pressed"]
